# lsst

./: .gitignore  .hadolint.yaml  .mdl_style.rb  .mdlrc  .rubocop.yml  .travis.yml  Gemfile  README.md  README.txt  SConstruct  configure.ac  distrib.bld  nominal-arm64.out  nominal-x86_64.out  nominal.out  test-lsstinstall.bash
.github/workflows/: acceptance.yaml  shellcheck.yaml  yamllint.yaml
doc/: GettingStarted.html
lib/: build_functions.sh  definitions.sh
python/: lsstEupsStartup.py  lssteups.py
scripts/: FileFilter.SConscript  SConscript  eupsmanifest.py  eupswrapcuda.sh  loadLSST.csh  loadLSST.sh  loadLSST.zsh  lsstinstall  lsstinstall.sh  lsstpkg  mksandbox  newinstall.sh  noI.py  ptest.sh  replicate_server.py  style.py  switcheups  tbl2man  tst.py
spec/unit/miniconda/: install_spec.rb
spec/unit/n8l/: am_i_sourced_spec.rb  bootstrap_miniconda_spec.rb  config_curl_spec.rb  create_load_scripts_spec.rb  default_eups_pkgroot_spec.rb  eups_base_dir_spec.rb  eups_dir_spec.rb  eups_path_spec.rb  eups_slug_spec.rb  fail_spec.rb  fmt_spec.rb  generate_loader_spec.rb  git_check_spec.rb  has_cmd_spec.rb  install_eups_spec.rb  join_spec.rb  ln_rel_spec.rb  miniconda_slug_spec.rb  parse_args_spec.rb  print_error_spec.rb  print_gretting_spec.rb  problem_vars_check_spec.rb  problem_vars_spec.rb  python_check_spec.rb  python_env_slug_spec.rb  pyverok_spec.rb  require_cmds_spec.rb  trim_spec.rb  up2date_check_spec.rb  usage_spec.rb
spec/unit/n8l/miniconda/: boostrap_spec.rb  config_channels_spec.rb  install_spec.rb  lsst_env_spec.rb
spec/unit/n8l/sys/: osfamily_spec.rb  platform_spec.rb
tests/: Dockerfile  Makefile  acceptance.sh  docker-acceptance.sh  hadolint.sh  make.sh  mdl.sh  miniconda_install_test.sh  shellcheck.sh  test-noi.py  test-style.py  yamllint.sh
tests/noIData/: ambigtest.stderr  head2test.stderr  headerOsx.stderr  headtest.stderr
tests/styleData/: test3-1.cc  test3-10.cc  test3-14.cc  test3-2.cc  test3-24.cc  test3-28.cc  test3-4.cc  test3-5.cc  test3-6.cc  test3-7.cc  test3-8.cc  test4-10.cc  test4-11.cc  test4-13.h  test4-15.cc  test4-1a.cc  test4-4a.h  test4-5.cc  test4-6.cc  test4-7.cc  test4-9.h  test4-9a.h  test4-9b.h  test5-10.cc  test5-14.cc  test5-16.cc  test5-17.cc  test5-2.cc  test5-21.cc  test5-22.cc  test5-24.cc  test5-27.cc  test5-28.cc  test5-29.cc  test5-3.cc  test5-31.cc  test5-32.cc  test5-33.cc  test5-39.cc  test5-40.cc  (+10 more)
ups/: lsst.cfg  lsst.table  lssteups.table
